// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createFsRouteTree > basic 1`] = `
{
  "children": {
    "": {
      "children": {
        "dynamic": {
          "children": {
            "[id]": {
              "children": {
                "[nested]": {
                  "value": {
                    "page": "/dynamic/[id]/[nested]/page.tsx",
                  },
                },
              },
              "value": {
                "layout": "/dynamic/[id]/layout.tsx",
                "page": "/dynamic/[id]/page.tsx",
              },
            },
            "catchall": {
              "children": {
                "[...any]": {
                  "value": {
                    "page": "/dynamic/catchall/[...any]/page.tsx",
                  },
                },
                "static": {
                  "value": {
                    "page": "/dynamic/catchall/static/page.tsx",
                  },
                },
              },
              "value": {
                "page": "/dynamic/catchall/page.tsx",
              },
            },
            "static": {
              "value": {
                "page": "/dynamic/static/page.tsx",
              },
            },
          },
          "value": {
            "layout": "/dynamic/layout.tsx",
            "page": "/dynamic/page.tsx",
          },
        },
        "other": {
          "value": {
            "page": "/other/page.tsx",
          },
        },
        "test": {
          "children": {
            "other": {
              "value": {
                "page": "/test/other/page.tsx",
              },
            },
          },
          "value": {
            "layout": "/test/layout.tsx",
            "page": "/test/page.tsx",
          },
        },
      },
      "value": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
    },
  },
}
`;

exports[`createFsRouteTree > basic 2`] = `
{
  "__pathname": "/",
  "match": {
    "/": {
      "nodeValue": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": {},
    },
  },
}
`;

exports[`createFsRouteTree > basic 3`] = `
{
  "__pathname": "/other",
  "match": {
    "/": {
      "nodeValue": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": {},
    },
    "/other": {
      "nodeValue": {
        "page": "/other/page.tsx",
      },
      "params": {},
    },
  },
}
`;

exports[`createFsRouteTree > basic 4`] = `
{
  "__pathname": "/not-found",
  "match": {
    "/": {
      "nodeValue": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": {},
    },
    "/not-found": {
      "nodeValue": undefined,
      "params": {},
    },
  },
}
`;

exports[`createFsRouteTree > basic 5`] = `
{
  "__pathname": "/test",
  "match": {
    "/": {
      "nodeValue": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": {},
    },
    "/test": {
      "nodeValue": {
        "layout": "/test/layout.tsx",
        "page": "/test/page.tsx",
      },
      "params": {},
    },
  },
}
`;

exports[`createFsRouteTree > basic 6`] = `
{
  "__pathname": "/test/other",
  "match": {
    "/": {
      "nodeValue": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": {},
    },
    "/test": {
      "nodeValue": {
        "layout": "/test/layout.tsx",
        "page": "/test/page.tsx",
      },
      "params": {},
    },
    "/test/other": {
      "nodeValue": {
        "page": "/test/other/page.tsx",
      },
      "params": {},
    },
  },
}
`;

exports[`createFsRouteTree > basic 7`] = `
{
  "__pathname": "/test/not-found",
  "match": {
    "/": {
      "nodeValue": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": {},
    },
    "/test": {
      "nodeValue": {
        "layout": "/test/layout.tsx",
        "page": "/test/page.tsx",
      },
      "params": {},
    },
    "/test/not-found": {
      "nodeValue": undefined,
      "params": {},
    },
  },
}
`;

exports[`createFsRouteTree > basic 8`] = `
{
  "__pathname": "/dynamic",
  "match": {
    "/": {
      "nodeValue": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": {},
    },
    "/dynamic": {
      "nodeValue": {
        "layout": "/dynamic/layout.tsx",
        "page": "/dynamic/page.tsx",
      },
      "params": {},
    },
  },
}
`;

exports[`createFsRouteTree > basic 9`] = `
{
  "__pathname": "/dynamic/static",
  "match": {
    "/": {
      "nodeValue": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": {},
    },
    "/dynamic": {
      "nodeValue": {
        "layout": "/dynamic/layout.tsx",
        "page": "/dynamic/page.tsx",
      },
      "params": {},
    },
    "/dynamic/static": {
      "nodeValue": {
        "page": "/dynamic/static/page.tsx",
      },
      "params": {},
    },
  },
}
`;

exports[`createFsRouteTree > basic 10`] = `
{
  "__pathname": "/dynamic/abc",
  "match": {
    "/": {
      "nodeValue": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": {},
    },
    "/dynamic": {
      "nodeValue": {
        "layout": "/dynamic/layout.tsx",
        "page": "/dynamic/page.tsx",
      },
      "params": {},
    },
    "/dynamic/abc": {
      "nodeValue": {
        "layout": "/dynamic/[id]/layout.tsx",
        "page": "/dynamic/[id]/page.tsx",
      },
      "params": {
        "id": "abc",
      },
    },
  },
}
`;

exports[`createFsRouteTree > basic 11`] = `
{
  "__pathname": "/dynamic/abc/def",
  "match": {
    "/": {
      "nodeValue": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": {},
    },
    "/dynamic": {
      "nodeValue": {
        "layout": "/dynamic/layout.tsx",
        "page": "/dynamic/page.tsx",
      },
      "params": {},
    },
    "/dynamic/abc": {
      "nodeValue": {
        "layout": "/dynamic/[id]/layout.tsx",
        "page": "/dynamic/[id]/page.tsx",
      },
      "params": {
        "id": "abc",
      },
    },
    "/dynamic/abc/def": {
      "nodeValue": {
        "page": "/dynamic/[id]/[nested]/page.tsx",
      },
      "params": {
        "id": "abc",
        "nested": "def",
      },
    },
  },
}
`;

exports[`createFsRouteTree > basic 12`] = `
{
  "__pathname": "/dynamic/%E2%9C%85",
  "match": {
    "/": {
      "nodeValue": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": {},
    },
    "/dynamic": {
      "nodeValue": {
        "layout": "/dynamic/layout.tsx",
        "page": "/dynamic/page.tsx",
      },
      "params": {},
    },
    "/dynamic/%E2%9C%85": {
      "nodeValue": {
        "layout": "/dynamic/[id]/layout.tsx",
        "page": "/dynamic/[id]/page.tsx",
      },
      "params": {
        "id": "✅",
      },
    },
  },
}
`;

exports[`createFsRouteTree > basic 13`] = `
{
  "__pathname": "/dynamic/catchall",
  "match": {
    "/": {
      "nodeValue": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": {},
    },
    "/dynamic": {
      "nodeValue": {
        "layout": "/dynamic/layout.tsx",
        "page": "/dynamic/page.tsx",
      },
      "params": {},
    },
    "/dynamic/catchall": {
      "nodeValue": {
        "page": "/dynamic/catchall/page.tsx",
      },
      "params": {},
    },
  },
}
`;

exports[`createFsRouteTree > basic 14`] = `
{
  "__pathname": "/dynamic/catchall/static",
  "match": {
    "/": {
      "nodeValue": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": {},
    },
    "/dynamic": {
      "nodeValue": {
        "layout": "/dynamic/layout.tsx",
        "page": "/dynamic/page.tsx",
      },
      "params": {},
    },
    "/dynamic/catchall": {
      "nodeValue": {
        "page": "/dynamic/catchall/page.tsx",
      },
      "params": {},
    },
    "/dynamic/catchall/static": {
      "nodeValue": {
        "page": "/dynamic/catchall/static/page.tsx",
      },
      "params": {},
    },
  },
}
`;

exports[`createFsRouteTree > basic 15`] = `
{
  "__pathname": "/dynamic/catchall/x",
  "match": {
    "/": {
      "nodeValue": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": {},
    },
    "/dynamic": {
      "nodeValue": {
        "layout": "/dynamic/layout.tsx",
        "page": "/dynamic/page.tsx",
      },
      "params": {},
    },
    "/dynamic/catchall": {
      "nodeValue": {
        "page": "/dynamic/catchall/page.tsx",
      },
      "params": {},
    },
    "/dynamic/catchall/x": {
      "nodeValue": {
        "page": "/dynamic/catchall/[...any]/page.tsx",
      },
      "params": {
        "any": "x",
      },
    },
  },
}
`;

exports[`createFsRouteTree > basic 16`] = `
{
  "__pathname": "/dynamic/catchall/x/y",
  "match": {
    "/": {
      "nodeValue": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": {},
    },
    "/dynamic": {
      "nodeValue": {
        "layout": "/dynamic/layout.tsx",
        "page": "/dynamic/page.tsx",
      },
      "params": {},
    },
    "/dynamic/catchall": {
      "nodeValue": {
        "page": "/dynamic/catchall/page.tsx",
      },
      "params": {},
    },
    "/dynamic/catchall/x": {
      "nodeValue": undefined,
      "params": {
        "any": "x/y",
      },
    },
    "/dynamic/catchall/x/y": {
      "nodeValue": {
        "page": "/dynamic/catchall/[...any]/page.tsx",
      },
      "params": {
        "any": "x/y",
      },
    },
  },
}
`;

exports[`createFsRouteTree > basic 17`] = `
{
  "__pathname": "/dynamic/catchall/x/y/z",
  "match": {
    "/": {
      "nodeValue": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": {},
    },
    "/dynamic": {
      "nodeValue": {
        "layout": "/dynamic/layout.tsx",
        "page": "/dynamic/page.tsx",
      },
      "params": {},
    },
    "/dynamic/catchall": {
      "nodeValue": {
        "page": "/dynamic/catchall/page.tsx",
      },
      "params": {},
    },
    "/dynamic/catchall/x": {
      "nodeValue": undefined,
      "params": {
        "any": "x/y/z",
      },
    },
    "/dynamic/catchall/x/y": {
      "nodeValue": undefined,
      "params": {
        "any": "x/y/z",
      },
    },
    "/dynamic/catchall/x/y/z": {
      "nodeValue": {
        "page": "/dynamic/catchall/[...any]/page.tsx",
      },
      "params": {
        "any": "x/y/z",
      },
    },
  },
}
`;
